added a createTaskEl for future proofing

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <div class="form-group">
                 <select name="task-type" class="select-dropdown">
                     <option value="" disabled selected>Pick a task type</option>
-                    <option value="Aroung-The-House">Around The House</option>
+                    <option value="Around-The-House">Around The House</option>
                     <option value="Vehicles">Vehicles</option>
                     <option value="School">School</option>
                     <option value="Personal">Personal</option>
